chore: 想省+1.65参数貌似不行,还有--allow-dirty导致部署失败

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently -r \"vite\" \"cargo +1.65 shuttle run --working-directory ./API\"",
     "build": "vue-tsc && vite build --emptyOutDir",
-    "build:all": "vue-tsc && vite build --emptyOutDir && cargo +1.65 build --manifest-path ./API/Cargo.toml",
+    "build:all": "vue-tsc && vite build --emptyOutDir && cd API && cargo build",
     "shuttle:deploy": "pnpm build && cargo +1.65 shuttle deploy --working-directory ./API"
   },
   "dependencies": {
