--- a/API/Cargo.toml
+++ b/API/Cargo.toml
@@ -18,3 +18,4 @@ shuttle-service = { version = "0.10.0", features = ["web-poem"] }
 tracing = "0.1.37"
 serde = {version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+reqwest = { version = "0.11.14", features = ["json", "multipart", "stream", "gzip", "deflate", "brotli"] }
