--- a/API/Cargo.toml
+++ b/API/Cargo.toml
@@ -19,3 +19,6 @@ tracing = "0.1.37"
 serde = {version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 reqwest = { version = "0.11.14", features = ["json", "multipart", "stream", "gzip", "deflate", "brotli"] }
+lazy_static = "1.4.0"
+json = "0.12.4"
+tokio = "1.22"
