--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "shuttle:deploy": "pnpm build && cargo shuttle deploy --allow-dirty --working-directory ./API"
   },
   "dependencies": {
-    "@vueuse/core": "^9.12.0",
+    "@vueuse/core": "^13.0.0",
     "gifler": "^0.1.0",
     "lingva-scraper": "^1.1.0",
-    "node-sound": "^0.0.5",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "lucide-vue-next": "^0.486.0",
+    "node-sound": "^0.0.8",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "concurrently": "^7.6.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
-    "vue-tsc": "^1.1.2"
+    "@vitejs/plugin-vue": "5.2.3",
+    "concurrently": "9.1.2",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.4",
+    "vue-tsc": "^2.2.8"
   }
 }
