--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,8 @@
 name: Shuttle Deploy
 
 on:
+  schedule:
+    - cron: '0 0 15 * *'
   push:
     branches:
       - master
@@ -15,3 +17,4 @@ jobs:
           shuttle-api-key: ${{ secrets.SHUTTLE_API_KEY }}
           project-id: proj_01JPZRTMT25VESEY1GFSH33CQF
           working-directory: "API"
+          extra-args: --allow-dirty --no-test
