--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
           shuttle-api-key: ${{ secrets.SHUTTLE_API_KEY }}
           project-id: proj_01JPZRTMT25VESEY1GFSH33CQF
           working-directory: "API"
-          extra-args: --allow-dirty --no-test
+          extra-args: --allow-dirty
